--- a/NewsApp/NewsApp/Base.lproj/Main.storyboard
+++ b/NewsApp/NewsApp/Base.lproj/Main.storyboard
@@ -203,7 +203,7 @@
             <objects>
                 <viewController id="ZeQ-ZP-wVB" customClass="FavoriteVC" customModule="NewsApp" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9QS-R1-EyR">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="mgs-Af-izg">
@@ -747,7 +747,7 @@
     </scenes>
     <inferredMetricsTieBreakers>
         <segue reference="Vw0-5m-eyw"/>
-        <segue reference="7Hs-Ee-wfu"/>
+        <segue reference="e3X-pK-Ykw"/>
         <segue reference="Y9t-Hk-caE"/>
     </inferredMetricsTieBreakers>
     <resources>
